Draft for Dr Ning

--- a/Sections/optimization.tex
+++ b/Sections/optimization.tex
@@ -60,7 +60,7 @@ We optimized each of the wind farms shown in Fig. \ref{layouts} with three diffe
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=\textwidth]{Figures/shears.pdf}
+  \includegraphics[width=0.8\textwidth]{Figures/shears.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_075.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_175.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_275.pdf}
@@ -69,7 +69,7 @@ We optimized each of the wind farms shown in Fig. \ref{layouts} with three diffe
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=1.1\textwidth]{Figures/spacing_multipliers.pdf}
+  \includegraphics[width=0.8\textwidth]{Figures/spacing_multipliers.pdf}
   %\includegraphics[width=\textwidth]{Figures/circle_spacings.png}
   %\includegraphics[width=.88\textwidth]{Figures/amalia_spacings.png}
   \caption{\label{farm_spacings}The six wind farm boundaries and associated baseline layouts optimized in this study. The same two layouts were multiplied by a spacing multiplier, $\beta=0.5,1.0,1.5$, which changed the wind farm size and the averaging spacing between wind turbines.  On the top is the 32-turbine, circular wind farm, and on the bottom is the 60-turbine, Princess Amalia wind farm.}
