Dr Ning Intro edits

--- a/references.bib
+++ b/references.bib
@@ -116,6 +116,18 @@ GRADIENT BASED OPTIMIZATION
   publisher={Elsevier}
 }
 
+@article{Gebraad2017,
+  author = {Gebraad, Pieter and Thomas, Jared J. and Ning, Andrew and Fleming, Paul and Dykes, Katherine},
+  doi = {10.1002/we.1993},
+  journal = {Wind Energy},
+  month = jan,
+  number = {1},
+  pages = {97--107},
+  title = {Maximization of the Annual Energy Production of Wind Power Plants by Optimization of Layout and Yaw-Based Wake Control},
+  volume = {20},
+  year = {2017}
+}
+
 @article{Ning2016a,
   author = {Ning, Andrew and Petch, Derek},
   doi = {10.1002/we.1972},
@@ -136,6 +148,18 @@ GRADIENT BASED OPTIMIZATION
   pages={110--123},
   year={2016},
   publisher={Elsevier}
+}
+
+@article{Fleming2016,
+  author = {Fleming, Paul and Ning, Andrew and Gebraad, Pieter and Dykes, Katherine},
+  doi = {10.1002/we.1836},
+  journal = {Wind Energy},
+  month = feb,
+  number = {2},
+  pages = {329--344},
+  title = {Wind Plant System Engineering through Optimization of Layout and Yaw Control},
+  volume = {19},
+  year = {2016}
 }
 
 
@@ -212,7 +236,7 @@ DIFFERENT HEIGHTS
   author={Stanley, Andrew PJ and Ning, Andrew and Dykes, Katherine},
   journal={Wind Energy},
   publisher={Wiley},
-  note={in review}
+  note={forthcoming}
 }
 
 
