--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -55,7 +55,7 @@ a 13.1\% increase in power generation in a wind farm with rotor diameter and lay
 
 The results of these studies indicate that in many situations, mixing different hub heights, rotor diameters, and turbine types increases the power production in a wind farm and decreases the COE. In this paper, we seek to build on these studies mentioned and others like them.
 %, showing another method to optimize mixed turbine wind farms and continue to show the benefits of wind farms with mixed turbine designs. 
-In this paper we make the following contributions, which are either novel in the field or significant improvements on previous studies.
+We make the following contributions, which are either novel in the field or significant improvements on previous studies.
 First, we include many aspects of turbine design as design variables coupled with turbine layout, rather than select one or two aspects of design or choose from a set of existing turbine models. This allows us to fully explore the design space and discover additional benefits associated with coupled design optimization.
 Second, in this paper we include the cost and structural impacts of changing the turbine design in our optimization objective and constraints.
 Third, we use gradient-based optimization with exact analytic gradients for every aspect of our wind farm model. This allows us to optimize large wind farms and include many design variables, which would be impossible with a gradient-free optimization approach.
