--- a/coupled-layout-design.tex
+++ b/coupled-layout-design.tex
@@ -56,7 +56,7 @@ In this study, wind farms are optimized to show the benefit of coupling turbine 
 \end{abstract}
 
 
-\copyrightstatement{TEXT}
+%\copyrightstatement{TEXT}
 
 
 \introduction  %% \introduction[modified heading if necessary]
@@ -89,7 +89,8 @@ In this study, wind farms are optimized to show the benefit of coupling turbine 
 
 
 \section{Results}
-\input{Sections/results}
+%\input{Sections/results}
+\input{Sections/new_results}
 
 
 \conclusions  %% \conclusions[modified heading if necessary]
