--- a/Sections/conclusions.tex
+++ b/Sections/conclusions.tex
@@ -2,9 +2,9 @@ The purpose of this study was to optimize wind turbine design and turbine layout
 
 Our main conclusions are twofold: coupled turbine design and layout optimization provides significant benefits compared to optimizing sequentially, and for many wind farms, two different turbine designs can greatly reduce the cost of energy. Without exception, coupled design and layout optimization performed better than optimizing the turbine design followed by the turbine layout. For a turbine design optimized in isolation, as was done in the sequential case, it was always most optimal to have a rotor diameter as large as the constraints would allow. Also, in coupled wind farm optimization, the wind farms with large spacing multipliers tended towards large rotor diameters. For this reason, the smallest wind farms benefited most from the coupled design and layout optimization, because the wind speeds were slow from strong wake interactions, and optimal rotor diameter was small---much different than the turbines optimized in isolation.
 
-Including two different turbine designs in the same wind farm can be very beneficial in reducing wake interference between wind turbines and result in a lower COE compared to a farm with all identical wind turbines. For wind turbines that are close together, wake interactions are very strong between turbines. With different turbine sizes, the hub height and rotor diameter can be optimized along with layout to avoid wakes in the vertical plane along with the horizontal plane. For a spacing multiplier $\beta=0.5$, indicating very closely spaced wind turbines, our optimization results show that two different turbine designs can reduce COE \textit{by an additional 10\%} compared to wind farms with homogeneous turbine design. For $\beta=1.0$, the farms with heterogeneous turbine designs are marginally better than the optimized farms with uniform design. For the largest farms, $\beta=1.5$, there is no benefit to having two different turbine designs in the same wind farm. When the turbines are very far apart, the wake interactions are weak enough that the turbines can approach the turbine design optimized in isolation. 
+Including two different turbine designs in the same wind farm can be very beneficial in reducing wake interference between wind turbines and result in a lower COE compared to a farm with all identical wind turbines. For wind turbines that are close together, wake interactions are very strong between turbines. With different turbine sizes, the hub height and rotor diameter can be optimized along with layout to avoid wakes in the vertical plane along with the horizontal plane. For a spacing multiplier $\beta=0.5$, indicating very closely spaced wind turbines, our optimization results show that two different turbine designs can reduce COE by an additional 10\% compared to wind farms with homogeneous turbine design. For $\beta=1.0$, the farms with heterogeneous turbine designs are marginally better than the optimized farms with uniform design, by 1--3\%. For the largest farms, $\beta=1.5$, there is no benefit to having two different turbine designs in the same wind farm. When the turbines are very far apart, the wake interactions are weak enough that the turbines can approach the turbine design optimized in isolation. 
 
-Our results indicate significantly superior wind farm designs when turbine design and layout are optimized as coupled design variables, and when two different turbine design groups are included in the same wind farm. \textit{Conservatively}, this practice can reduce wind farm COE by 3--5\% for many wind farm spacings and wind shear conditions, and can reduce COE by upwards of 10\% for the more extreme cases.
+%Our results indicate significantly superior wind farm designs when turbine design and layout are optimized as coupled design variables, and when two different turbine design groups are included in the same wind farm. Conservatively, this practice can reduce wind farm COE by 3--5\% for many wind farm spacings and wind shear conditions, and can reduce COE by upwards of 10\% for the more extreme cases.
 % COE decrease when optimizing turbine design for the wind farm where it will operate. The original Princess Amalia wind farm (with $\beta=1.0$, so the original wind farm layout), experiences over a 20\% COE reduction when the wind turbines design is optimized along with the layout, for all wind shear exponents tested in this study. This is compared to the baseline wind farm, with 2 Megawatt turbines, 80 meter rotor diameter, and 100 meter hub height. 20\% COE decrease is unheard of! 
-According to the U.S. Energy Information Administration, onshore wind energy will have a similar COE as the projected cheapest energy sources, coal and natural gas, for new plants coming online in 2022 \citep{levelized}. Add onto this a 10\% COE reduction, and wind becomes by far the cheapest energy option available, even without any tax benefits. Coupling the optimization of turbine design and layout, and considering heterogeneous turbine design throughout a wind farm is the difference between a clean, cheap energy source, and the cheapest energy source regardless of any other consideration. 
+%According to the U.S. Energy Information Administration, onshore wind energy will have a similar COE as the projected cheapest energy sources, coal and natural gas, for new plants coming online in 2022 \citep{levelized}. Add onto this a 10\% COE reduction, and wind becomes by far the cheapest energy option available, even without any tax benefits. Coupling the optimization of turbine design and layout, and considering heterogeneous turbine design throughout a wind farm is the difference between a clean, cheap energy source, and the cheapest energy source regardless of any other consideration. 
 
