--- a/Sections/optimization.tex
+++ b/Sections/optimization.tex
@@ -6,14 +6,11 @@ Rather than optimize each turbine, we chose two groups because our previous stud
         
         We ran several cases in which different design variables were included in the problem to allow comparison of their effects on COE. In all, the design variables we included were the position of each turbine ($x_i,y_i$), the tower height of each group ($H_1, H_2$), the rotor diameter of each group ($D_1, D_2$), the rated power of each group ($R_1, R_2$), the tower diameter of each group ($d_{1,j}, d_{2,j}$), and the tower shell thickness of each group ($t_{1,j}, t_{2,j}$). Index j refers location on the tower (j=1 is at the bottom, j=2 at the midpoint, j=3 at the top), meaning there are six total variables to define diameter (three for each height group), and six to define the tower shell thickness.
                 
-        The position of each turbine was constrained so that it could not be within two rotor diameters of any other turbine in the wind farm. Because rotor diameter was a design variable, this constraint was defined such that the distance between any two turbines in the wind farm was greater than the sum of the two rotor diameters.
-        Each turbine was also constrained to be within the boundaries of the original baseline layout.
-%         Also, for the Princess Amalia layouts, each turbine was constrained so that it could not leave the convex hull of the original turbine layout at the beginning of the optimization. For the circular farm, there was a circular wind farm boundary defined by the radius from the baseline turbine layout. 
-        %This constraint ensured that the turbines did not simply spread far apart to decrease COE. 
-        The tower heights and rotor diameters were also constrained such that the tower height would be taller than the rotor radius plus a ground clearance, which we set as 10 m. This allowed us to separate the heights of different turbines while keeping a safe distance from the ground. 
-        Both the rotor diameter and the turbine rating were constrained by the lowest and highest values that were included in the RotorSE optimization. This constraint is defined from the upper and lower functioning limits of RotorSE. The lower limits were never active in these optimizations, however some of the upper limits were active as will be seen in the Results section.
-        %but is only a formality as it was never active in any of the optimization runs we did. 
-        The tower diameter was constrained to be less than 6.3 meters for transportation, and greater than or equal to 3.87 meters at the top, to allow for the connection to the nacelle. Each tower was also structurally constrained by the shell buckling and natural frequency of the tower. The shell buckling constraint was applied to each height group for both the maximum thrust conditions and the survival load, with a safety factor of 1.35 for the loads and 1.1 for buckling resistance. The first natural frequency of the tower was constrained to be greater than the frequency at which the blades rotate and less than the blade passing frequency, with a factor of safety of 1.1. The diameter-to-thickness ratio was constrained to be greater than 120 at any point, to allow for welding. The optimization can be expressed:
+             
+          The turbine layout and structural constraints are that were previously formulated in our multiple-hub-height study \citep{stanley2018}. Because rotor diameter was a design variable, the turbine spacing constraint was slightly reformulated such that the distance between any two turbines in the wind farm was greater than the sum of the two rotor diameters.
+           The rotor diameter and the turbine rating were constrained by the lowest and highest values that were included in the RotorSE optimization. This constraint is defined from the upper and lower functioning limits of RotorSE. The lower limits were never active in these optimizations, however some of the upper limits were active as will be seen in the Results section.
+       The optimization can be expressed:
+        
         
         \begin{equation}
 			\begin{aligned}
@@ -41,26 +38,27 @@ Rather than optimize each turbine, we chose two groups because our previous stud
 %
 Note that i is the index defining the wind turbine, and j is the index describing the location on the tower.
         
-        The gradients for this optimization were all analytic. We calculated the partial derivatives of each small section of the model and included each part in a framework called OpenMDAO, which calculates the gradients of the entire system \citep{gray2010openmdao}. The analytic gradients are significant because they are more accurate, converging to better solutions, and converge on the solution much faster that finite difference gradients. More importantly, they allow us to solve much larger optimization problems. % These analytic gradients allow coupled optimization of turbine position, height, diameter and thickness, and yaw in each wind direction. Including yaw introduces thousands of design variables, and is nearly impossible to optimize with gradient-free methods and very time-consuming with finite difference gradients.  
+        The gradients for this optimization were all analytic. We calculated the partial derivatives of each small section of the model and included each part in a framework called OpenMDAO, which calculates the gradients of the entire system \citep{gray2010openmdao}. The analytic gradients are significant because they are more accurate, converge to better solutions, and converge on the solution much faster that finite difference gradients. More importantly, they allow us to solve much larger optimization problems. % These analytic gradients allow coupled optimization of turbine position, height, diameter and thickness, and yaw in each wind direction. Including yaw introduces thousands of design variables, and is nearly impossible to optimize with gradient-free methods and very time-consuming with finite difference gradients.  
         
 We optimized two different wind farms, each with different wind shear exponents and turbine spacing multipliers as will be explained later in this section. 
-The first wind farm is a fictional 32 turbine wind farm with a circular boundary. The baseline layout and boundary is shown in Fig. \ref{circular_layout}. This wind farm was optimized with the Alturas wind data shown in Fig. \ref{alturas}.  
-The second wind farm is the Princess Amalia wind farm layout which has 60 wind turbines, and which was optimized with the Princess Amalia wind data shown in Figs. \ref{amalia} and \ref{amalia_speeds}. The farm boundary for this wind farm is the convex hull of the original Princess Amalia wind farm. The baseline turbine layout and boundaries are shown in Fig. \ref{amalia_layout}. The turbines in both wind farms are Vestas 2 Megawatt wind turbines, which have a rotor diameter of 80 meters. Therefore, we used a baseline rotor diameter of 80 meters and a baseline power rating of 2 Megawatts. The baseline hub height used in this study was 100 meters. 
+The first wind farm is a fictional 32-turbine wind farm with a circular boundary. %The baseline layout and boundary is shown in Fig. \ref{circular_layout}. 
+This wind farm was optimized with the Alturas wind data shown in Fig. \ref{wind_roses}.  
+The second wind farm is the Princess Amalia wind farm layout which has 60 wind turbines, and which was optimized with the Princess Amalia wind data shown in Figs. \ref{wind_roses} and \ref{amalia_speeds}. The farm boundary for this wind farm is the convex hull of the original Princess Amalia wind farm. The baseline turbine layout and boundaries are shown in Fig. \ref{layouts}. The turbines in both wind farms are Vestas 2 Megawatt wind turbines, which have a rotor diameter of 80 meters. Therefore, we used a baseline rotor diameter of 80 meters and a baseline power rating of 2 Megawatts. The baseline hub height used in this study was 100 meters. 
 
 \begin{figure}[htbp]
   \centering
   %\includegraphics[trim={1cm 0 0 0},clip,width=0.4\textwidth]{Figures/circular.png}
   %\includegraphics[trim={0 0 1cm 0},width=0.392\textwidth]{Figures/amalia.png}
-   \includegraphics[width=\textwidth]{Figures/baseline_layouts.pdf}
+   \includegraphics[width=0.7\textwidth]{Figures/baseline_layouts.pdf}
   \caption{\label{layouts} The two different wind farm designs that were optimized. On the left is a contrived circular wind farm design with 32 turbines. On the right is the Princess Amalia wind farm, an offset grid design with 60 wind turbines. }
 \end{figure}
 
-We optimized each of the wind farms shown in Fig. \ref{layouts} with three different wind shear exponents (0.075, 0.175, 0.275), and three different spacing multipliers (0.5, 1.0, 1.5). The wind shear exponent defines how fast the wind speed changes with height, as seen in Equation \ref{Eq:shear}. Low shear exponents are typical over open water or flat plains, while higher shear exponents exist in areas with a lot of large trees or buildings. Figure \ref{shear_profile} shows the wind speed profiles of the three shear exponents we used. For a shear exponent of 0.075, there is only an 8.6\% increase in the wind speed from the reference height of 50 meters to 150 meters. For a shear exponent of 0.175 there is a wind speed increase of 21.2\% for the same height difference, and for a shear exponent of 0.275 the wind speed increase is 35.3\% from 50 to 150 meters. We also optimized each wind farm for different turbine spacings by adjusting the turbine locations by some spacing multiplier, $\beta$.  This is simply some constant multiplied to each turbine location. The wind farm boundaries were adjusted accordingly with the spacing multipliers. Figures \ref{amalia_spacings} and \ref{circle_spacings} show both of the wind farms adjusted by the spacing multipliers.
+We optimized each of the wind farms shown in Fig. \ref{layouts} with three different wind shear exponents (0.075, 0.175, 0.275), and three different spacing multipliers (0.5, 1.0, 1.5). The wind shear exponent defines how fast the wind speed changes with height, as seen in Equation \ref{Eq:shear}. Low shear exponents are typical over open water or flat plains, while higher shear exponents exist in areas with a lot of large trees or buildings. Figure \ref{shear_profile} shows the wind speed profiles of the three shear exponents we used. For a shear exponent of 0.075, there is only an 8.6\% increase in the wind speed from the reference height of 50 meters to 150 meters. For a shear exponent of 0.175 there is a wind speed increase of 21.2\% for the same height difference, and for a shear exponent of 0.275 the wind speed increase is 35.3\% from 50 to 150 meters. We also optimized each wind farm for different turbine spacings by adjusting the turbine locations by some spacing multiplier, $\beta$.  This is simply some constant multiplied to each turbine location. The wind farm boundaries were adjusted accordingly with the spacing multipliers, meaning for radius of the circular wind farm was also multiplied by the spacing multiplier, and the convex hull of the Princess Amalia farm was applied to the adjusted turbine locations. Figure \ref{farm_spacings} shows both of the wind farms adjusted by the spacing multipliers, as well as the turbine spacing in baseline rotor diameters. As the turbine designs are optimized, these spacings (in rotor diameters) will increase or decrease according. Note that in the circular wind farm, the turbine distances are presented in the rows closely inline with the dominant wind direction. The closest neighboring turbines are actually $\sqrt{2}/2$ multiplied by this value. 
 
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/shears.pdf}
+  \includegraphics[width=0.7\textwidth]{Figures/shears.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_075.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_175.pdf}
   %\includegraphics[width=0.49\textwidth]{Figures/windProfile_0_275.pdf}
@@ -69,13 +67,13 @@ We optimized each of the wind farms shown in Fig. \ref{layouts} with three diffe
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.8\textwidth]{Figures/spacing_multipliers.pdf}
+  \includegraphics[width=0.7\textwidth]{Figures/spacing_multipliers.pdf}
   %\includegraphics[width=\textwidth]{Figures/circle_spacings.png}
   %\includegraphics[width=.88\textwidth]{Figures/amalia_spacings.png}
-  \caption{\label{farm_spacings}The six wind farm boundaries and associated baseline layouts optimized in this study. The same two layouts were multiplied by a spacing multiplier, $\beta=0.5,1.0,1.5$, which changed the wind farm size and the averaging spacing between wind turbines.  On the top is the 32-turbine, circular wind farm, and on the bottom is the 60-turbine, Princess Amalia wind farm.}
+  \caption{\label{farm_spacings}The six wind farm boundaries and associated baseline layouts optimized in this study. The same two layouts were multiplied by a spacing multiplier, $\beta=0.5,1.0,1.5$, which changed the wind farm size and the averaging spacing between wind turbines.  On the top is the 32-turbine, circular wind farm, and on the bottom is the 60-turbine, Princess Amalia wind farm. The turbine spacings, in baseline rotor diameters, are also displayed for each spacing multiplier in this figure.}
 \end{figure}
 
-The results of gradient-based optimization, especially for problems with many local minima, are sensitive to the starting location. As in most optimization problems, there is no guarantee that the solution is the global solution. The best results can be achieved with a multiple-start approach, where several different starting points are used for each condition, and the best solution is used. In our study, we started each turbine location from the Princess Amalia or circular wind farm baseline locations in Figs. \ref{amalia_spacings} and \ref{circle_spacings}, each perturbed by a random amount. All of the other design variables were initialized randomly.
+The results of gradient-based optimization, especially for problems with many local minima, are sensitive to the starting location. As in most optimization problems, there is no guarantee that the solution is the global solution. The best results can be achieved with a multiple-start approach, where several different starting points are used for each condition, and the best solution is used. In our study, we started each turbine location from the Princess Amalia or circular wind farm baseline locations in Fig. \ref{farm_spacings}, each perturbed by a random amount. All of the other design variables were initialized randomly.
 
 % \begin{figure}[htbp]
 %   \centering
