--- a/Sections/wake_model.tex
+++ b/Sections/wake_model.tex
@@ -11,21 +11,22 @@ The FLORIS model had some discontinuities in the original formulation, so in thi
 %Check your citations for what type of style manual you are using (Chicago, APA, etc.) For most style manuals, all footnotes go at the end of the sentence.
 
 
-The total wake deficit at any given point is defined as the square root of the sum of the squares of the loss contribution from each turbine wake:
+The total velocity deficit at any given point is defined as the square root of the sum of the squares of the loss contribution from each turbine wake:
 
 \begin{equation}
 L = \sqrt{\sum_{i=1}^\text{nTurbs}L_i^2}
 \end{equation}
 
-\noindent Thus at any point in the wind farm, the wind speed is:
+%\noindent Thus at any point in the wind farm, the wind speed is:
 
-\begin{equation}
-V = V_\infty(1-L)
-\end{equation}
+%\begin{equation}
+%V = V_\infty(1-L)
+%\end{equation}
 
-\noindent Note that $V_\infty$ is defined as the freestream wind speed at the hub height of the wind turbine in question. Variations of the freestream wind speed are calculated with the wind profile power law: 
+%\noindent Note that $V_\infty$ is defined as the freestream wind speed at the hub height of the wind turbine in question. 
+\noindent Variations of the free stream wind speed with height are calculated with the wind profile power law: 
 \begin{equation}
 V = V_{\text{ref}}\Big(\frac{z}{z_{\text{ref}}}\Big)^\alpha
 \label{Eq:shear}
 \end{equation}
-where $V_{\text{ref}}$ is the reference wind speed given by the wind data; $z_{\text{ref}}$ is height at which the reference wind speed was measured, which we assumed to be 50 meters; $V$ is the wind speed at and height $z$; and $\alpha$ is the wind shear exponent, which defines how the wind speed varies with height.
+where $V$ is the wind speed at height $z$; $V_{\text{ref}}$ is the reference wind speed given by the wind data; $z_{\text{ref}}$ is height at which the reference wind speed was measured, which we assumed to be 50 meters;  and $\alpha$ is the wind shear exponent, which defines how the wind speed varies with height.
